feat(engine): harden registry resolution and compatibility (AS-026C)